fix: remove MultisigTest1